--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,11 @@ buildscript {
         maven {
             url uri('file:///Users/LocalRepository')
         }
-        google()
+        maven {
+            url 'https://maven.google.com'
+        }
         jcenter()
-        
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
@@ -22,7 +24,9 @@ allprojects {
         maven {
             url uri('file:///Users/LocalRepository')
         }
-        google()
+        maven {
+            url 'https://maven.google.com'
+        }
         jcenter()
         
     }
