插件增加参数可自定义设置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
     }
 }
 
+checkResourceConfig {
+    autoPreviewResult false
+//    outputDir "./out"
+}
+
 configurations.all {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
