插件支持白名单 增加冲突资源数量显示

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,10 @@ android {
 }
 
 checkResourceConfig {
-    autoPreviewResult false
+    autoPreviewResult true
+//    autoPreviewResult false
 //    outputDir "./out"
+    whiteListFile "../checkResource/whitelist.lxc"
 }
 
 configurations.all {
