可以检测所有类型的资源

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
 }
 
 checkResourceConfig {
-    autoPreviewResult true
-//    autoPreviewResult false
+//    autoPreviewResult true
+    autoPreviewResult false
 //    outputDir "./out"
 //    whiteListFile "../checkResource/whitelist.lxc"
 }
