--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     implementation localGroovy()
     implementation gradleApi()
     implementation 'com.android.tools.build:gradle:3.3.2'
+    implementation 'com.sun.mail:android-mail:1.6.2'
+    implementation 'com.sun.mail:android-activation:1.6.2'
 }
 
 sourceSets {
