--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,6 @@
 buildscript {
     repositories {
         maven {
-            url uri('file:///Users/LocalRepository')
-        }
-        maven {
             url 'https://maven.google.com'
         }
         maven {
@@ -16,7 +13,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        classpath 'com.orzangleli.checkresourceprefix:plugin:0.0.1-SNAPSHOT'
+        classpath 'com.orzangleli:checkresourceconflict:0.0.1'
+        classpath 'com.novoda:bintray-release:0.9.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -25,16 +23,13 @@ buildscript {
 allprojects {
     repositories {
         maven {
-            url uri('file:///Users/LocalRepository')
-        }
-        maven {
             url 'https://maven.google.com'
         }
         maven {
             url "https://maven.java.net/content/groups/public/"
         }
         jcenter()
-        
+
     }
 }
 
