兼容app module 执行任务时返回的目录为没有v4等后缀的情况

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     repositories {
         maven {
+            url uri('file:///Users/LocalRepository')
+        }
+        maven {
             url 'https://maven.google.com'
         }
         maven {
@@ -22,6 +25,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url uri('file:///Users/LocalRepository')
+        }
         maven {
             url 'https://maven.google.com'
         }
